[package]
name = "u2h"
version = "0.1.4"
edition = "2021"
description = "A simple UDP to HTTP translation proxy."
license = "MIT"
repository = "https://github.com/antonta0/u2h"
keywords = ["cli", "network", "udp", "proxy", "http"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
rcgen = { version = "0.11" }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
ring = { version = "0.16" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24" }
seqlock = { version = "0.2" }
